<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <!-- Title Field -->
    <TextView
        android:id="@+id/titleLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/enter_tile"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/titleInput"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:autofillHints=""
        android:hint="@string/enter_tile"
        android:inputType="text" />

    <!-- Price Field -->
    <TextView
        android:id="@+id/priceLabel"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:hint="@string/enter_tile"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/priceInput"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:autofillHints=""
        android:hint="@string/enter_price"
        android:inputType="numberDecimal" />

    <!-- Description Field -->
    <TextView
        android:id="@+id/descriptionLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/description"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/descriptionInput"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:autofillHints=""
        android:hint="@string/enter_description"
        android:inputType="textMultiLine" />

    <!-- Image Selection -->
    <Button
        android:id="@+id/selectImageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/select_image"/>


    <!-- Submit Button -->
    <Button
        android:id="@+id/submitButton"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/submit_post"

        android:textAllCaps="false" />

</LinearLayout>